Profile image & logout & bugfix

--- a/lib/l10n/arb/app_es.arb
+++ b/lib/l10n/arb/app_es.arb
@@ -59,5 +59,9 @@
   "usernameInvalid": "Nombre de usuario inválido",
   "@usernameInvalid": {
     "description": "Mensaje de error para nombre inválido"
+  },
+  "logoutButton": "Cerrar sesión",
+  "@logoutButton": {
+    "description": "Texto del botón de cerrar sesión"
   }
 }
