--- a/lib/l10n/arb/app_es.arb
+++ b/lib/l10n/arb/app_es.arb
@@ -1,8 +1,8 @@
 {
   "@@locale": "es",
-  "counterAppBarTitle": "Contador",
-  "@counterAppBarTitle": {
-    "description": "Texto mostrado en la AppBar de la página del contador"
+  "medicalReminderAppBarTitle": "Recordatorio médico",
+  "@medicalReminderAppBarTitle": {
+    "description": "Texto mostrado en la AppBar de la página de inicio de la aplicación."
   },
   "loginPageTitle": "Iniciar sesion",
   "@loginPageTitle": {
@@ -121,5 +121,9 @@
         "example": "12"
       }
     }
+  },
+  "addMedicationButton": "Agregar medicamento",
+  "@addMedicationButton": {
+    "description": "Texto del botón de agregar medicamento"
   }
 }
